[gd_scene load_steps=3 format=3 uid="uid://dc7lfi4pph4ko"]

[ext_resource type="PackedScene" uid="uid://b32o6pbc0lqsf" path="res://scenes/technical/state.tscn" id="1_kanc3"]
[ext_resource type="Script" path="res://scenes/technical/states/chasing_state.gd" id="2_rirjo"]

[node name="ChasingState" instance=ExtResource("1_kanc3")]
script = ExtResource("2_rirjo")
nav_refresh_time = 0.15

[node name="NavTimer" type="Timer" parent="." index="0"]

[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
